kubernetes-templates/04_cvat_backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvat-backend
  namespace: cvat
  labels:
    app: cvat-app
    tier: backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cvat-app
      tier: backend
  template:
    metadata:
      labels:
        app: cvat-app
        tier: backend
    spec:
      containers:
        - name: cvat-backend-app-container
          image: labeling.azurecr.io/cvat/server # to replace with your Container Registry
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1000m
              memory: 5G
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: /home/django/data
            name: cvat-backend-data
            subPath: data
          - mountPath: /home/django/keys
            name: cvat-backend-data
            subPath: keys
          - mountPath: /home/django/logs
            name: cvat-backend-data
            subPath: logs
          - mountPath: /home/django/models
            name: cvat-backend-data
            subPath: models
          - mountPath: /home/django/share
            name: azure-share
      volumes:
        - name: cvat-backend-data
          persistentVolumeClaim:
            claimName: cvat-backend-data
        - name: azure-share
          azureFile:
            secretName: cvat-backend-record-secret
            shareName: recordings
            readOnly: false
