kubernetes-templates/04_cvat_frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvat-frontend
  namespace: cvat
  labels:
    app: cvat-app
    tier: frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cvat-app
      tier: frontend
  template:
    metadata:
      labels:
        app: cvat-app
        tier: frontend
    spec:
      containers:
        - name: cvat-frontend-app-container
          image: labeling.azurecr.io/cvat/ui:v1 # to replace with your Container Registry
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          resources: {}
