kubernetes-templates/06_cvat_load_balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: cvat-load-balancer
  namespace: cvat
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: chaoskreuzung
spec:
  type: LoadBalancer
  loadBalancerIP: 52.143.28.184
  ports:
  - port: 80
  selector:
    app: cvat-app
    tier: proxy
