kubernetes-templates/07_labeling_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cvat-ingress
  namespace: cvat
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/server-snippet: |
        server_name  _ default;
        proxy_pass_header       X-CSRFToken;
        proxy_set_header        Host $http_host;
        proxy_pass_header       Set-Cookie;
        location ~* /api/.*|git/.*|tensorflow/.*|auto_annotation/.*|analytics/.*|static/.*|admin|admin/.*|documentation/.*|dextr/.*|reid/.*  {
            proxy_pass              http://cvat-backend-service:8080;
        }
        client_max_body_size 0; # Important, otherwise no video uploading possible!
        proxy_max_temp_file_size 0;

spec:
  tls:
  - hosts:
    - chaoskreuzung.westeurope.cloudapp.azure.com # Replace with your domain
    secretName: tls-secret
  rules:
  - host: "chaoskreuzung.westeurope.cloudapp.azure.com" # replace with your domain
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: cvat-frontend-service
          servicePort: 80
      # In future we can try to remove the server snippet and write this here
      # - path: /api/.*|git/.*|tensorflow/.*|auto_annotation/.*|analytics/.*|static/.*|admin|admin/.*|documentation/.*|dextr/.*|reid/.*
      #   backend:
      #     serviceName: cvat-backend-service
      #     servicePort: 80
